[gd_scene load_steps=16 format=2]

[ext_resource path="res://assests/sprites/button_normal.png" type="Texture" id=1]
[ext_resource path="res://assests/sprites/button_hover.png" type="Texture" id=2]
[ext_resource path="res://assests/sprites/button_pressed.png" type="Texture" id=3]
[ext_resource path="res://source/ui/HUD.tres" type="DynamicFont" id=4]
[ext_resource path="res://source/scripts/HUD.gd" type="Script" id=5]
[ext_resource path="res://assests/sounds/ui.wav" type="AudioStream" id=6]
[ext_resource path="res://assests/art/insta_1.png" type="Texture" id=7]
[ext_resource path="res://assests/art/itch_1.png" type="Texture" id=8]
[ext_resource path="res://assests/art/twitter.png" type="Texture" id=9]
[ext_resource path="res://assests/art/insta_2.png" type="Texture" id=10]
[ext_resource path="res://assests/art/twitter_2.png" type="Texture" id=11]
[ext_resource path="res://assests/art/itch_2.png" type="Texture" id=12]
[ext_resource path="res://source/ui/font.tres" type="DynamicFont" id=13]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 3

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 3

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_btn" type="TextureButton" parent="."]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.5
margin_top = -8.0
margin_right = 23.5
margin_bottom = 8.0
focus_neighbour_bottom = NodePath("../Exit_btn")
focus_next = NodePath("../Exit_btn")
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Start_btn"]
margin_right = 48.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Start"
align = 1
valign = 1

[node name="Exit_btn" type="TextureButton" parent="."]
material = SubResource( 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.5
margin_top = 24.0
margin_right = 23.5
margin_bottom = 40.0
focus_neighbour_top = NodePath("../Start_btn")
focus_previous = NodePath("../Start_btn")
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Exit_btn"]
margin_right = 48.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gui_snd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="SocialMedia" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
custom_constants/separation = 42
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Twitter" type="TextureButton" parent="SocialMedia"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )

[node name="Itch" type="TextureButton" parent="SocialMedia"]
margin_left = 74.0
margin_right = 106.0
margin_bottom = 32.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 8 )

[node name="Insta" type="TextureButton" parent="SocialMedia"]
margin_left = 148.0
margin_right = 180.0
margin_bottom = 32.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 7 )

[node name="Score" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 13 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Start_btn" to="." method="_on_Start_btn_pressed"]
[connection signal="pressed" from="Exit_btn" to="." method="_on_Exit_btn_pressed"]
[connection signal="button_up" from="SocialMedia/Twitter" to="." method="_on_Twitter_button_up"]
[connection signal="button_up" from="SocialMedia/Itch" to="." method="_on_Itch_button_up"]
[connection signal="button_up" from="SocialMedia/Insta" to="." method="_on_Insta_button_up"]
